--- a/configs/.htaccess
+++ b/configs/.htaccess
@@ -1,5 +1,5 @@
 SetEnv XORUX_ACCESS_CONTROL 1
-AuthUserFile /home/lpar2rrd/lpar2rrd/etc/web_config/htusers.cfg
-AuthName "Authorized personnel only."
+AuthUserFile /home/stor2rrd/stor2rrd/etc/web_config/htusers.cfg
+AuthName "STOR2RRD authorization"
 AuthType Basic
 Require valid-user
