--- a/configs/apache2/stor2rrd.conf
+++ b/configs/apache2/stor2rrd.conf
@@ -5,7 +5,7 @@ DocumentRoot  "/home/stor2rrd/stor2rrd/www/
     Options Indexes FollowSymLinks Includes MultiViews
     AuthType basic
     AuthName "STOR2RRD authorization"
-    AuthUserFile /etc/apache2/conf/htpasswd
+    AuthUserFile /home/stor2rrd/stor2rrd/etc/web_config/htusers.cfg
     Require valid-user
 </Directory>
 
@@ -15,7 +15,10 @@ ScriptAlias /stor2rrd-cgi/ "/home/stor2rrd/stor2rrd/stor2rrd-cgi/"
     AllowOverride AuthConfig FileInfo
     SetHandler cgi-script
     Options ExecCGI Includes FollowSymLinks
-    Require all granted
+    AuthType basic
+    AuthName "STOR2RRD authorization"
+    AuthUserFile /home/stor2rrd/stor2rrd/etc/web_config/htusers.cfg
+    Require valid-user
 </Directory>
 SetEnv VM_IMAGE 1
 SetEnv VI_IMAGE 1
